# zigchain

./: .dockerignore  .gitignore  Dockerfile  LICENSING.md  README.md  build.zig  resume.md
deploy/: docker-entrypoint.sh
deploy/aws/: README.md  cloudformation.yaml
deploy/testnet/: README.md  docker-compose.yml  testnet.sh
refimpl-rs/: Cargo.toml
refimpl-rs/src/: lib.rs
spec/: custody.md  finality.md  ghostdag.md  pow.md  vault.md
spec/tla/: Finality.cfg  Finality.tla  FinalityByzExceeded.cfg  README.md
spec/vectors/: scenarios.json
src/: bench_main.zig  demo_main.zig  license_main.zig  node_main.zig  root.zig  sim_main.zig  vault_main.zig  vectors_main.zig
src/core/consensus/: chain.zig  dag.zig  fees.zig  finality.zig  ghostdag.zig  heavyhash.zig  ledger_state.zig  mass.zig  parallel.zig  pow.zig  processor.zig
src/core/crypto/: hash.zig  kdf.zig
src/core/crypto/pq/: registry.zig  sphincs.zig
src/core/ledger/: accumulator.zig  block_validation.zig  sharded_utxo.zig  utxo.zig  validation.zig
src/core/primitives/: block.zig  multisig.zig  types.zig
src/core/serialization/: codec.zig
src/custody/: signer.zig
src/licensing/: license.zig
src/net/: addrbook.zig  ratelimit.zig  wire.zig
src/node/: mempool.zig  store.zig
src/sim/: simnet.zig
src/tests/: properties.zig
tools/: difftest.sh  gen_vectors.py
