[package]
name = "zigchain-ref"
version = "0.1.0"
edition = "2021"
description = "Independent reference implementation of ZigChain consensus primitives, for differential testing against the Zig node."

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "vectors"
path = "src/bin/vectors.rs"

[profile.release]
opt-level = 2
